# task-tracker

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  code-header-template.txt  config-raw.json  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum  magefile.go  main.go
.github/workflows/: ci.yml
.hermes/plans/: 2026-07-20_time-tracking-ui.md
backend/: Cargo.toml  Dockerfile  docker-compose.test.yml
backend/api/: Cargo.toml
backend/api/src/: dto.rs  lib.rs  routes.rs
backend/api/src/dto/: mod.rs  requests.rs
backend/api/src/middleware/: auth.rs
backend/api/src/routes/: auth.rs  board.rs  dashboard.rs  health.rs  issues.rs  mod.rs  projects.rs  search.rs
backend/api/tests/: integration.rs  middleware.rs
backend/app/: Cargo.toml
backend/app/src/: auth.rs  commands.rs  context.rs  dto.rs  lib.rs  services.rs
backend/app/src/dto/: tests.rs
backend/app/src/services/: tests.rs
backend/cli/: Cargo.toml
backend/cli/src/: main.rs
backend/crates/shared/src/: config.rs
backend/domain/: Cargo.toml
backend/domain/src/: entities.rs  events.rs  lib.rs  repositories.rs  value_objects.rs
backend/domain/src/entities/: tests.rs
backend/domain/src/repositories/: tests.rs
backend/domain/src/stubs/: memory.rs
backend/domain/src/stubs/memory/: tests.rs
backend/domain/src/value_objects/: tests.rs
backend/fixtures/dev/: users.sql
backend/infra/: Cargo.toml
backend/infra/src/: cache.rs  config.rs  db.rs  event_bus.rs  lib.rs  repos.rs
backend/infra/src/cache/: tests.rs
backend/infra/src/entities/: attachment.rs  board.rs  comment.rs  issue.rs  label.rs  mod.rs  prelude.rs  project.rs  project_member.rs  sprint.rs  user.rs
backend/infra/src/event_bus/: tests.rs
backend/infra/tests/: repos.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20250723_000001_create_tables.rs  m20250723_000002_seed_demo_data.rs
backend/migrations/seeds/: .gitkeep
backend/openapi/: openapi.json
backend/scripts/: run-e2e-tests.sh
backend/server/: Cargo.toml
backend/server/src/: lib.rs  main.rs
backend/server/tests/: e2e.rs
backend/shared/: Cargo.toml
backend/shared/src/: config.rs  config_tests.rs  error.rs  id.rs  lib.rs  lib_tests.rs
backend/shared/src/id/: tests.rs
backend/tests/fixtures/: .gitkeep
cli/: Cargo.toml
cli/src/: main.rs
docs/: ADR.md  AGENTS.md  API.md  API_EDGE_CASES.md  API_STANDARDS.md  API_VERSIONING.md  ARCHITECTURE.md  AUTH_ADVANCED.md  BACKUP_RESTORE.md  CACHING.md  CI_CD.md  CLI.md  CODE_REVIEW.md  CODE_STYLE.md  DATABASE_INDEXES.md  DATABASE_STANDARDS.md  DATA_MODEL.md  DATA_RETENTION.md  DEPLOYMENT.md  DESIGN_TOKENS.md  DOMAIN_MODEL.md  ERROR_HANDLING.md  EVENTS.md  FAQ.md  FEATURE_FLAGS.md  FRONTEND_ARCHITECTURE.md  FRONTEND_STANDARDS.md  GLOSSARY.md  I18N.md  JIRA_GAP_DETAILS.md  JIRA_UI_CAPTURE.md  JQL.md  LIBRARIES.md  LOAD_BALANCING.md  LOCAL_SETUP.md  LOGGING_STANDARDS.md  MIGRATIONS.md  MONITORING.md  NOTIFICATIONS.md  ONBOARDING.md  (+25 more)
docs/adr/: 0001-rust-axum.md  0002-react-vite.md  0003-postgresql.md  0004-seaorm-sqlx.md  0005-feature-sliced-design.md  0006-auth-jwt-refresh.md  0007-redis.md  0008-shadcn-tailwind.md  0009-query-zustand.md  0010-apalis.md
frontend/: .env.local.example  Dockerfile  embed.go  env.d.ts  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: integration.spec.ts  screenshots.spec.ts  smoke.spec.ts  time-tracking.spec.ts
frontend/scripts/: screenshot-dialog.mjs  screenshots.mjs
frontend/src/: index.css  main.tsx  sentry.ts  urls.ts
openapi/: README.md  openapi.json
pkg/audit/: audit_test.go  entry.go  listener.go  writer.go
pkg/caldav/: caldav.go  caldav_test.go  parsing.go  parsing_test.go  priority.go  priority_test.go  repeat_test.go
pkg/caldavtests/: auth_test.go  bugs_test.go  client_compat_test.go  crud_test.go  discovery_test.go  integrations.go  main_test.go  propfind_bodies.go  propfind_test.go  relations_test.go  report_test.go  smoke_test.go  sync_test.go  vtodo_builder.go  vtodo_roundtrip_test.go  xml_helpers.go
pkg/cmd/: cmd.go  dump.go  healthcheck.go  migrate.go  repair.go  repair_file_mime_types.go  repair_orphan_positions.go  repair_projects.go  repair_task_positions.go  restore.go  testmail.go  user.go  version.go  web.go
pkg/config/: config.go  config_test.go
pkg/cron/: cron.go
pkg/db/: db.go  db_path_test.go  db_test.go  dump.go  helpers.go  helpers_test.go  test.go  test_fixtures.go
pkg/doctor/: config.go  database.go  doctor.go  files.go  files_unix.go  files_windows.go  output.go  services.go  system.go  system_unix.go  system_windows.go  types.go  userns_linux.go  userns_other.go
pkg/e2etests/: integrations.go  main_test.go  user_webhook_test.go  webhook_multi_test.go  webhook_test.go
pkg/events/: events.go  events_test.go  listeners.go  request_meta.go  testing.go
pkg/files/: db.go  diagnostics_unix.go  diagnostics_windows.go  dump.go  error.go  filehandling.go  files.go  files_test.go  main_test.go  repair.go  s3_test.go  storage.go  storage_local.go  storage_local_test.go  storage_mem.go  storage_mem_test.go  storage_s3.go
pkg/health/: health.go
pkg/i18n/: i18n.go
pkg/initialize/: events.go  init.go
pkg/license/: check.go  license.go
pkg/log/: echo_logger.go  logging.go  logging_test.go  mail_logger.go  noop.go  watermill_logger.go  xorm_logger.go
pkg/mail/: domain.go  domain_test.go  mail.go  mail_test.go  send_mail.go  send_mail_test.go  testing.go
pkg/metrics/: active_users.go  metrics.go
pkg/migration/: 20190324205606.go  20190328074430.go  20190430111111.go  20190511202210.go  20190514192749.go  20190524205441.go  20190718200716.go  (+123 more)
scripts/: backup.sh  cleanup_old_backups.sh  deploy-production.sh  deploy-staging.sh  generate-openapi.sh  init-admin.sh  init.sh  reset-admin-password.sh  restore.sh  run-e2e-tests.sh  seed-demo.sh
(+760 files in other folders)
