# Placeholder — workspace root for the Task Tracker backend.
# Implement once configuration, crate layout and migrations stabilize.

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"

[workspace.dependencies]
# Placeholder: add shared dependencies once crate layout stabilizes.
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
sea-orm = "2.0"
sqlx = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
