[workspace]
members = ["api", "app", "domain", "infra", "shared", "server", "cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
authors = ["FerrPOINT <https://github.com/FerrPOINT>"]
license = "MIT"
repository = "https://github.com/FerrPOINT/task-tracker"

[workspace.dependencies]
# runtime
axum = "0.8.3"
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# db
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls"] }
migration = { path = "migration" }
# auth
argon2 = "0.5"
jsonwebtoken = "9.3"
# validation
validator = { version = "0.19", features = ["derive"] }
# errors
thiserror = "2.0"
anyhow = "1.0"
# testing
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
# cli
clap = { version = "4.5", features = ["derive"] }
# shared
uuid = { version = "1.16", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# openapi
utoipa = { version = "5.0", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
