[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
shared = { path = "../shared" }
domain = { path = "../domain" }
infra = { path = "../infra" }
async-trait = "0.1"
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
sea-orm.workspace = true
anyhow.workspace = true
