[package]
name = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
clap.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
