[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
domain = { path = "../domain" }
app = { path = "../app" }
infra = { path = "../infra" }
api = { path = "../api" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
