[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
shared = { path = "../shared" }
domain = { path = "../domain" }
app = { path = "../app" }
infra = { path = "../infra" }
api = { path = "../api" }
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
sea-orm.workspace = true
serial_test = "3.2"
